--- a/biocard.html
+++ b/biocard.html
@@ -13,9 +13,9 @@
     <body onload="retrieve()">
         <ul>
             <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
-            <li><a href="https://cornerofrandom.github.io/error.html">random page</a></li>
-            <li><a href="https://cornerofrandom.github.io/about.html">about</a></li>
-            <li><a class="active" href="https://cornerofrandom.github.io/biomaker.html">biomaker</a></li>
+            <li><a href="https://cornerofrandom.github.io/error">random page</a></li>
+            <li><a href="https://cornerofrandom.github.io/about">about</a></li>
+            <li><a class="active" href="">biomaker</a></li>
             <li><a href="https://cornerofrandom.github.io">home</a></li>
 
         </ul>
