--- a/biocard.html
+++ b/biocard.html
@@ -4,21 +4,13 @@
     <head>
         <title>BioCard Maker</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> <!--for formatting the biocard-->
+        <style>#biomaker{background-color: rgba(255, 205, 238, 0.7);}</style>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
 </head>
     <body onload="retrieve()">
-        <ul>
-            <a class="name" href="https://cornerofrandom.github.io">corner of random</a>        
-            <li><a href="https://cornerofrandom.github.io/error">random page</a></li>
-            <li><a href="https://cornerofrandom.github.io/about">about</a></li>
-            <li><a class="active" href="">biomaker</a></li>
-            <li><a href="https://cornerofrandom.github.io">home</a></li>
-
-        </ul>
+        <div id="navbar"></div>
+        <script src = "navbar.js"></script>
         <center>
         <div class='container'>
             <h2>biocard maker</h2>
