--- a/biocard.html
+++ b/biocard.html
@@ -23,8 +23,9 @@
                 <h2>Biocard Maker</h2>
                 <p>Welcome to the bio-card maker.
                     <br>You can open the sidebar for more advanced options.<br>
-                    An auto-save option is currently in beta testing.
-                    For now, please select the 'save' option in the save menu to save your work.
+                    The card should auto-save your preferences if you're using a browser with localStorage. <br>
+                    Try switching to Chrome if there are issues saving. <br>
+                    Save data will be lost if you are using an incognito browser, or if you reset your browsing history.
                 </p>
                 <div class="profileoutline" id="print">
                         <center>
