--- a/biocard.html
+++ b/biocard.html
@@ -22,10 +22,10 @@
             <div id="main">
                 <h2>Biocard Maker</h2>
                 <p>Welcome to the bio-card maker.
-                    <br>You can open the sidebar for more advanced options.<br>
-                    The card should auto-save your preferences if you're using a browser with localStorage. <br>
+                    <br>You can open the sidebar for more advanced options.<br><br>
+                    The card should auto-save your preferences.<br>
                     Try switching to Chrome if there are issues saving. <br>
-                    Save data will be lost if you are using an incognito browser, or if you reset your browsing history.
+                    Save data will be lost if you reset your browsing history.
                 </p>
                 <div class="profileoutline" id="print">
                         <center>
