--- a/biocard.html
+++ b/biocard.html
@@ -78,7 +78,7 @@
                 <button onclick="reset();">Reset Card</button>
                 <br>
                 <p style="font-family: Calibri,sans-serif; font-size: 9px; margin-top: 5px;"> Designed and made by
-                    <span style="color:black !important;"><a href="./arysia/arysia.html">@</a></span>erinna#5448</p>
+                    @erinna#5448</p>
 
             </div>
             <div id="saveMenu">
